src/index.css
:root{
  --background: #000000;
  --primary: #4988C4;
  --secondary: #1C4D8D;
  --tertiary: #493979;
  --button: #BDE8F5;
  --text: #C9BEFF
}

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  border: none;
  font-family: "Inter", sans-serif;
}

body {
  overflow-y: hidden;
}

